# cake

./: CMakeLists.txt  README.md  beauty.sh  bootstrap  cake.code-workspace  do  do_debug.sh  do_distclean.sh  do_release.sh  test.sh
ca_cake/: CMakeLists.txt
ca_cake/inc/: camain.h
ca_cake/src/: camain.cpp  mainApp.cpp
ca_libcake/: CMakeLists.txt
ca_libcake/inc/: caargopt.h  caargv.h  cacakemanager.h  caconfenv.h  cainterfaces.h  caithread.h  cajoblayer.h  cajobmakescript.h  cajobstep.h  calayerconf.h  calogger.h  calogiface.h  camainconf.h  caphaseutils.h  caprjstatus.h  caprojectconf.h  cascheduler.h  castatusconf.h  cathreadclient.h  cathreadmanager.h  cathreadsimple.h  cautils.h
ca_libcake/src/: caargopt.cpp  caargv.cpp  cacakemanager.cpp  caconfenv.cpp  cajoblayer.cpp  cajobmakebuildscript.cpp  cajobmakedeployscript.cpp  cajobmakepackagescript.cpp  cajobmakescript.cpp  cajobmakesourcescript.cpp  cajobstep.cpp  calayerconf.cpp  calcfxml.cpp  calogger.cpp  camainconf.cpp  caminiXml.cpp  caphaseutils.cpp  caprjstatus.cpp  caprojectconf.cpp  cascheduler.cpp  castatusconf.cpp  cathreadclient.cpp  cathreadmanager.cpp  cathreadsimple.cpp  cautils.cpp
ca_packfile/: CMakeLists.txt  copygenerated.sh  dogenerate.sh
ca_packfile/src/: packfile.cpp
ca_test/: CMakeLists.txt
ca_test/inc/: CPPtester.h
ca_test/src/: testcalogger.cpp
default_script/: default_log.sh  download_apt.sh  download_git.sh  download_key_sign.sh  download_rsync.sh  download_svn.sh  download_wget.sh  expand_to.sh  post_download_apt.sh  post_download_git.sh  post_download_rsync.sh  post_download_svn.sh  post_download_wget.sh  pre_download.sh  pre_patch.sh  verify_store_backup.sh
doc/: manual.txt
repo_example/: example.xml  layers.xml  mainconf.xml
repo_example/layers/: layer_step_id_0.xml  layer_step_id_2.xml  layers.xml
repo_example/repo/binutils/: conf.xml
repo_example/repo/cloog/: conf.xml
repo_example/repo/gcc/: conf.xml
repo_example/repo/mpfr/: conf.xml
templatexml/: calayerconf.xml  camainconf.xml  caprojectconf.xml  castatusconf.xml  makefile
